methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:3: error: type mismatch;
 found   : Unit
 required: Boolean
    if (estFaceMur==false){
    ^