methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
    if (estFaceMur==false){
      avance()
      if (getCouleurSol==Color.green){
        recule()
        return true
      }
      else {
        return false
      }
    }
}        

while (estSurBiscuit==false){
  if (isFacingTrail){
    avance()
  }
  else{
    gauche()
  }
}
